assignment1/src/main/d96/parser/test/antlr_test/D96Parser.java
// Generated from D96.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class D96Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DECIMAL_NO_ZERO=1, DECIMAL=2, HEXA=3, OCTAL=4, BIN=5, FLOAT_LITERAL=6, 
		STRING_LITERAL=7, STATEMENT=8, CONSTRUCTOR=9, DESTRUCTOR=10, CLASS=11, 
		SELF=12, IF=13, ELSEIF=14, ELSE=15, FOREACH=16, IN=17, BY=18, TRUE=19, 
		FALSE=20, NULL=21, ARRAY=22, INT=23, FLOAT=24, BOOLEAN=25, STRING=26, 
		VAL=27, VAR=28, RETURN=29, BREAK=30, CONTINUE=31, ADD=32, SUB=33, MUL=34, 
		DIV=35, REM=36, NOT=37, AND=38, OR=39, NEQ=40, EQUAL=41, GT=42, LTE=43, 
		LT=44, GTE=45, CONCAT=46, STR_EQUAL=47, DOUBCOLON=48, DOT=49, NEW=50, 
		ASSIGN=51, LP=52, RP=53, LCB=54, RCB=55, LSB=56, RSB=57, SEMI=58, COMMA=59, 
		COLON=60, DOTDOT=61, DOLLAR=62, DOLLAR_ID=63, ID=64, UNCLOSE_STRING=65, 
		ILLEGAL_ESCAPE=66, COMMENT=67, WS=68, ERROR_CHAR=69;
	public static final int
		RULE_program = 0, RULE_class_list = 1, RULE_class1 = 2, RULE_inherit_parent = 3, 
		RULE_inside_class = 4, RULE_method = 5, RULE_static_method = 6, RULE_non_static_method = 7, 
		RULE_constructor = 8, RULE_destructor = 9, RULE_attribute = 10, RULE_symmetric_var_exp = 11, 
		RULE_variable_list = 12, RULE_parameter_list = 13, RULE_id_list = 14, 
		RULE_statement = 15, RULE_statement_list = 16, RULE_var_const_declar_stment = 17, 
		RULE_symmetric_var_exp1 = 18, RULE_assign_stment = 19, RULE_lhs_assignment = 20, 
		RULE_index_expression = 21, RULE_index_operators = 22, RULE_scalar_variable = 23, 
		RULE_attribute_access = 24, RULE_static_attribute_access = 25, RULE_if_stment = 26, 
		RULE_else_if = 27, RULE_for_in_stment = 28, RULE_break_stment = 29, RULE_continue_stment = 30, 
		RULE_return_stment = 31, RULE_method_invo_stment = 32, RULE_instance_invok_method = 33, 
		RULE_static_invok_method = 34, RULE_block_stment = 35, RULE_data_type = 36, 
		RULE_array_type = 37, RULE_primitive_type = 38, RULE_class_exp = 39, RULE_exp = 40, 
		RULE_exp1 = 41, RULE_exp2 = 42, RULE_exp3 = 43, RULE_exp4 = 44, RULE_exp5 = 45, 
		RULE_exp6 = 46, RULE_exp7 = 47, RULE_exp8 = 48, RULE_exp9 = 49, RULE_exp10 = 50, 
		RULE_operands = 51, RULE_static_operands = 52, RULE_static_func_call = 53, 
		RULE_func_call = 54, RULE_exp_list = 55, RULE_literal = 56, RULE_indexed_array_literal = 57, 
		RULE_multi_array_literal = 58, RULE_integer_literal = 59, RULE_boolean_literal = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "class_list", "class1", "inherit_parent", "inside_class", 
			"method", "static_method", "non_static_method", "constructor", "destructor", 
			"attribute", "symmetric_var_exp", "variable_list", "parameter_list", 
			"id_list", "statement", "statement_list", "var_const_declar_stment", 
			"symmetric_var_exp1", "assign_stment", "lhs_assignment", "index_expression", 
			"index_operators", "scalar_variable", "attribute_access", "static_attribute_access", 
			"if_stment", "else_if", "for_in_stment", "break_stment", "continue_stment", 
			"return_stment", "method_invo_stment", "instance_invok_method", "static_invok_method", 
			"block_stment", "data_type", "array_type", "primitive_type", "class_exp", 
			"exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", 
			"exp9", "exp10", "operands", "static_operands", "static_func_call", "func_call", 
			"exp_list", "literal", "indexed_array_literal", "multi_array_literal", 
			"integer_literal", "boolean_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'statement'", "'Constructor'", 
			"'Destructor'", "'Class'", "'Self'", "'If'", "'Elseif'", "'Else'", "'Foreach'", 
			"'In'", "'By'", "'True'", "'False'", "'Null'", "'Array'", "'Int'", "'Float'", 
			"'Boolean'", "'String'", "'Val'", "'Var'", "'Return'", "'Break'", "'Continue'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'!='", "'=='", 
			"'>'", "'<='", "'<'", "'>='", "'+.'", "'==.'", "'::'", "'.'", "'New'", 
			"'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "':'", 
			"'..'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DECIMAL_NO_ZERO", "DECIMAL", "HEXA", "OCTAL", "BIN", "FLOAT_LITERAL", 
			"STRING_LITERAL", "STATEMENT", "CONSTRUCTOR", "DESTRUCTOR", "CLASS", 
			"SELF", "IF", "ELSEIF", "ELSE", "FOREACH", "IN", "BY", "TRUE", "FALSE", 
			"NULL", "ARRAY", "INT", "FLOAT", "BOOLEAN", "STRING", "VAL", "VAR", "RETURN", 
			"BREAK", "CONTINUE", "ADD", "SUB", "MUL", "DIV", "REM", "NOT", "AND", 
			"OR", "NEQ", "EQUAL", "GT", "LTE", "LT", "GTE", "CONCAT", "STR_EQUAL", 
			"DOUBCOLON", "DOT", "NEW", "ASSIGN", "LP", "RP", "LCB", "RCB", "LSB", 
			"RSB", "SEMI", "COMMA", "COLON", "DOTDOT", "DOLLAR", "DOLLAR_ID", "ID", 
			"UNCLOSE_STRING", "ILLEGAL_ESCAPE", "COMMENT", "WS", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "D96.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public D96Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Class_listContext class_list() {
			return getRuleContext(Class_listContext.class,0);
		}
		public TerminalNode EOF() { return getToken(D96Parser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			class_list();
			setState(123);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_listContext extends ParserRuleContext {
		public Class1Context class1() {
			return getRuleContext(Class1Context.class,0);
		}
		public Class_listContext class_list() {
			return getRuleContext(Class_listContext.class,0);
		}
		public Class_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterClass_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitClass_list(this);
		}
	}

	public final Class_listContext class_list() throws RecognitionException {
		Class_listContext _localctx = new Class_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_list);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				class1();
				setState(126);
				class_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				class1();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class1Context extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(D96Parser.CLASS, 0); }
		public TerminalNode ID() { return getToken(D96Parser.ID, 0); }
		public Inherit_parentContext inherit_parent() {
			return getRuleContext(Inherit_parentContext.class,0);
		}
		public TerminalNode LCB() { return getToken(D96Parser.LCB, 0); }
		public Inside_classContext inside_class() {
			return getRuleContext(Inside_classContext.class,0);
		}
		public TerminalNode RCB() { return getToken(D96Parser.RCB, 0); }
		public Class1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterClass1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitClass1(this);
		}
	}

	public final Class1Context class1() throws RecognitionException {
		Class1Context _localctx = new Class1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_class1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(CLASS);
			setState(132);
			match(ID);
			setState(133);
			inherit_parent();
			setState(134);
			match(LCB);
			setState(135);
			inside_class();
			setState(136);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inherit_parentContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(D96Parser.COLON, 0); }
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public Inherit_parentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inherit_parent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterInherit_parent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitInherit_parent(this);
		}
	}

	public final Inherit_parentContext inherit_parent() throws RecognitionException {
		Inherit_parentContext _localctx = new Inherit_parentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inherit_parent);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COLON:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(COLON);
				setState(139);
				id_list();
				}
				break;
			case LCB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inside_classContext extends ParserRuleContext {
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public Inside_classContext inside_class() {
			return getRuleContext(Inside_classContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public Inside_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inside_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterInside_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitInside_class(this);
		}
	}

	public final Inside_classContext inside_class() throws RecognitionException {
		Inside_classContext _localctx = new Inside_classContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_inside_class);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTRUCTOR:
			case DESTRUCTOR:
			case DOLLAR_ID:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				method();
				setState(144);
				inside_class();
				}
				break;
			case VAL:
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				attribute();
				setState(147);
				inside_class();
				}
				break;
			case RCB:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public Static_methodContext static_method() {
			return getRuleContext(Static_methodContext.class,0);
		}
		public Non_static_methodContext non_static_method() {
			return getRuleContext(Non_static_methodContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public DestructorContext destructor() {
			return getRuleContext(DestructorContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitMethod(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_method);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOLLAR_ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				static_method();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				non_static_method();
				}
				break;
			case CONSTRUCTOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(154);
				constructor();
				}
				break;
			case DESTRUCTOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(155);
				destructor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Static_methodContext extends ParserRuleContext {
		public TerminalNode DOLLAR_ID() { return getToken(D96Parser.DOLLAR_ID, 0); }
		public TerminalNode LP() { return getToken(D96Parser.LP, 0); }
		public TerminalNode RP() { return getToken(D96Parser.RP, 0); }
		public Block_stmentContext block_stment() {
			return getRuleContext(Block_stmentContext.class,0);
		}
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Static_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_static_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterStatic_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitStatic_method(this);
		}
	}

	public final Static_methodContext static_method() throws RecognitionException {
		Static_methodContext _localctx = new Static_methodContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_static_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(DOLLAR_ID);
			setState(159);
			match(LP);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(160);
				parameter_list();
				}
			}

			setState(163);
			match(RP);
			setState(164);
			block_stment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_static_methodContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(D96Parser.ID, 0); }
		public TerminalNode LP() { return getToken(D96Parser.LP, 0); }
		public TerminalNode RP() { return getToken(D96Parser.RP, 0); }
		public Block_stmentContext block_stment() {
			return getRuleContext(Block_stmentContext.class,0);
		}
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Non_static_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_static_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterNon_static_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitNon_static_method(this);
		}
	}

	public final Non_static_methodContext non_static_method() throws RecognitionException {
		Non_static_methodContext _localctx = new Non_static_methodContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_non_static_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(ID);
			setState(167);
			match(LP);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(168);
				parameter_list();
				}
			}

			setState(171);
			match(RP);
			setState(172);
			block_stment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTOR() { return getToken(D96Parser.CONSTRUCTOR, 0); }
		public TerminalNode LP() { return getToken(D96Parser.LP, 0); }
		public TerminalNode RP() { return getToken(D96Parser.RP, 0); }
		public Block_stmentContext block_stment() {
			return getRuleContext(Block_stmentContext.class,0);
		}
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitConstructor(this);
		}
	}
